django router so far

--- a/api/templates/api/api.html
+++ b/api/templates/api/api.html
@@ -4,7 +4,7 @@
 
 <div class="container content">
   <div id="home">
-    <h1 class="text-center">Blog page</h1>
+    <h1 class="text-center">API page</h1>
   </div>
 </div>
 
