--- a/templates/whgdj/search.html
+++ b/templates/whgdj/search.html
@@ -5,7 +5,7 @@
 
 <div class="container content">
   <div id="home">
-    <h1 class="text-center">search/map</h1>
+    <h1 class="text-center">map/search</h1>
   </div>
 </div>
 
