--- a/templates/whgdj/about.html
+++ b/templates/whgdj/about.html
@@ -4,7 +4,7 @@
 
 <div class="container content">
   <div id="home">
-    <h1 class="text-center">Blog page</h1>
+    <h1 class="text-center">About WHG</h1>
   </div>
 </div>
 
