--- a/templates/whgdj/api.html
+++ b/templates/whgdj/api.html
@@ -1,10 +1,10 @@
-{% extends 'whgdj/base_django.html' %}
+{% extends 'base_django.html' %}
 
 {% block content %}
 
 <div class="container content">
   <div id="home">
-    <h1 class="text-center">Blog page</h1>
+    <h1 class="text-center">API page</h1>
   </div>
 </div>
 
