--- a/templates/whgdj/base_django.html
+++ b/templates/whgdj/base_django.html
@@ -30,6 +30,15 @@
           <div class="navbar-nav ml-auto">
               <a class="nav-item nav-link" href="{% url 'search' %}">Map/Search</a>
           </div>
+          <div class="navbar-nav ml-auto">
+              <a class="nav-item nav-link" href="{% url 'blog' %}">Blog</a>
+          </div>
+          <div class="navbar-nav ml-auto">
+              <a class="nav-item nav-link" href="{% url 'api' %}">API</a>
+          </div>
+          <div class="navbar-nav ml-auto">
+              <a class="nav-item nav-link" href="{% url 'about' %}">About WHG</a>
+          </div>
         </div>
       </div>
     </nav>
