--- a/templates/whgdj/base_django.html
+++ b/templates/whgdj/base_django.html
@@ -37,7 +37,7 @@
               <a class="nav-item nav-link" href="{% url 'api' %}">API</a>
           </div>
           <div class="navbar-nav ml-auto">
-              <a class="nav-item nav-link" href="{% url 'about' %}">About WHG</a>
+              <a class="nav-item nav-link" href="{# url 'about' #}">About WHG</a>
           </div>
         </div>
       </div>
